# unitree_rl_lab

./: .gitignore
deploy/include/isaaclab/envs/mdp/observations/: observations.h
deploy/robots/g1_29dof/config/: config.yaml
deploy/robots/g1_29dof/src/: State_Mimic.cpp
deploy/robots/go2/: CMakeLists.txt
scripts/rsl_rl/: train.py
source/unitree_rl_lab/unitree_rl_lab/assets/robots/: unitree.py
source/unitree_rl_lab/unitree_rl_lab/tasks/locomotion/robots/g1/29dof/: velocity_env_cfg.py
source/unitree_rl_lab/unitree_rl_lab/tasks/locomotion/robots/go2/: velocity_env_cfg.py
source/unitree_rl_lab/unitree_rl_lab/tasks/locomotion/robots/h1/: velocity_env_cfg.py
